K8s/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sixatomic
  labels:
    app: sixatomic
spec:
  selector:
    app: sixatomic
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
